# agent-project

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: project-workflow.md
.projects/completed/2026-03-project-utility/: project-utility-plan.md  project-utility-status.txt  project-utility.md
src/project_utility/: __init__.py  cli.py  core.py
src/project_utility/templates/: plan.md.tmpl  project.md.tmpl
